--- a/block-BHaabu/index.html
+++ b/block-BHaabu/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Gradient</title>
-	<link rel="stylesheet" type="text/css" href="./style.css">
+	<link rel="stylesheet" type="text/css" href="./stylesheet/style.css">
 </head>
 <body>
 	<h1>Backgrounds and Gradients</h1>
